[workspace]
resolver = "2"

members = [
  "testsi",
  # "testsi-macros",

  "examples/echo-test",
]

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
# testsi-macros = { version = "0.1", path = "testsi-macros" }
testsi = { version = "0.1", path = "testsi" }

