[workspace]
resolver = "2"

members = [
  "testsi",
  "trolley",
  "libcmt-sys",

  # TODO: put parts of this in rollups-contracts, using forge bing --alloy
  "types",

  # "examples/echo-test",
  "examples/echo-dapp",
  "examples/echo-test",
]

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"


[workspace.dependencies]
# testsi-macros = { version = "0.1", path = "testsi-macros" }
libcmt-sys = { version = "0.1", path = "libcmt-sys" }
testsi = { version = "0.1", path = "testsi" }
trolley = { version = "0.1", path = "trolley" }
types = { version = "0.1", path = "types" }

cartesi-machine = { version = "0.18", git = "https://github.com/cartesi/dave", branch = "feature/update-machine"}

alloy-sol-types = "0.8"
alloy-primitives = "0.8"
