[package]
name = "libcmt-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69"

ar = "0.9"
tar = "0.4"
xz2 = { version = "0.1", features = ["static"] }

bytes = { version = "1.0" }
hex-literal = "0.4.1"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
