[package]
name = "libcmt-sys"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]

[build-dependencies]
bindgen = "0.69"

ar = "0.9"
tar = "0.4"
xz2 = { version = "0.1", features = ["static"] }

bytes = { version = "1.0" }
hex-literal = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
