[package]
name = "testsi"
edition.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
testsi-macros = { path = "./testsi-macros" }
types = { workspace = true }

cartesi-machine = { workspace = true }

alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }

clap = { version = "4.4" }
inventory = "0.3"
libtest-mimic = "0.6"
num-traits = "0.2"
thiserror = "1.0"
