[package]
name = "testsi"
edition.workspace = true
license.workspace = true
version.workspace = true


[dependencies]
testsi-macros = { path = "./testsi-macros" }
types = { workspace = true }

cartesi-machine = { workspace = true }

alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }

inventory = "0.3"
libtest-mimic = "0.6"
thiserror = "1.0"
