[package]
name = "trolley"
version.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["cmt"]
cmt = ["dep:libcmt-sys"]
mock = []

[dependencies]
libcmt-sys = { workspace = true, optional = true }
types = { workspace = true }

alloy-primitives = { workspace = true }
